--- a/static/styles/components/button.css
+++ b/static/styles/components/button.css
@@ -51,8 +51,8 @@
 
 .btn--outline {
   background-color: transparent;
-  border-color: var(--color-primary);
-  color: var(--color-primary);
+  border-color: var(--color-text);
+  color: var(--color-text);
 }
 
 .btn--ghost {
