--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -46,6 +46,9 @@
 @import url("pages/press.css");
 @import url("pages/investieren.css");
 
+/* Themes */
+@import url("themes/borrowing.css");
+
 /* Blocks */
 @import url("blocks/hero.css");
 @import url("blocks/calculator.css");
