--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -69,6 +69,7 @@
 @import url("blocks/about.css");
 @import url("blocks/subpage.css");
 @import url("blocks/login.css");
+@import url("blocks/onboarding.css");
 @import url("blocks/loan-apply.css");
 
 /* Responsive */
